--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-	Empowering you to troll your friends this election season!
+	<h1>Empowering you to troll your friends this election season!</h1>
+	<br><br>
 
 <form action="trollBlast.php" method="post">
 <legend></legend>
@@ -16,15 +17,34 @@ Phone Number:<br>
 Your Name:<br>
 <input type="text" name="sender">
 <br>
-Carrier:<br>
+Carrier (until we do the lookup):<br>
  <select name="carrier">
 <option value="Verizon">Verizon</option>
 <option value="ATT">ATT</option>
 <option value="Sprint">Sprint</option>
 <option value="Tmobile">T-Mobile</option>
 </select>
+<br>
+Candidate: (this isnt turned on yet)<br>
+ <select name="candidate">
+<option value="trump">Donald Trump</option>
+<option value="clinton">Hillary Clinton</option>
+<option value="paul">Ron Paul</option>
+<option value="bush">Jeb Bush</option>
+</select>
+
+
+
 <br><br>
-<input type="submit" value="Submit">
+	<b>Troll</b> your friends if they support the candidate you selected, and need to learn a thing or two!
+<br><br>
+	<b>Applaud</b> your friends if they know the candidate you selected is a joke!
+<br><br>
+
+<input type="submit" name="troll" value="Troll">
+<input type="submit" name="applaud" value="Applaud">
+
+
 
 </form>
 
