--- a/index.html
+++ b/index.html
@@ -48,49 +48,56 @@
         <div class="col-lg-12">
             <h1 class="page-header"></h1>
         </div>
+<form action="form.html" method="post" id="form1">
+  First name: <input type="text" name="fname"><br>
+  Last name: <input type="text" name="lname"><br>
+</form>
 
+<button type="submit" form="form1" value="Submit"></button>
+		
+		
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/trump.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/clinton.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/jeb.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/bernie.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/carson.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/rand.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/rubio.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/chrischristie.png" alt="">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-            <a class="img-circle" href="#">
+            <a class="img-circle" href="form.html">
                 <img class="img-circle img-responsive img-center" src="homeimage/cruzz.png" alt="">
             </a>
         </div>
@@ -104,41 +111,7 @@
     <hr>
     <br>
     <br>
-    <form class="form-horizontal" action="trollBlast.php" method="post">
-
-        <div class="form-group">
-            <div class="col-sm-2">
-                <input type="text" id="phone" class="form-control" name="phone" placeholder="Phone Number" required
-                       title="enter valid cell #">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-2">
-                <input type="text" class="form-control" name="sender" placeholder="Your Name*" pattern=".{3,25}"
-                       required title="must be at least 3 characters">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10">
-                <input type="checkbox" name="vehicle" value="terms" required> I agree to the <a href="/./terms.html">
-                Terms of Use</a><br>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-10">
-                <input type="submit" class="btn btn-warning btn-lg" name="troll" value="Troll" data-trigger="hover"
-                       data-toggle="popover" data-placement="top" title="Troll"
-                       data-content="Troll your friends if they support the candidate you selected, and need to learn a thing or two!">
-                <input type="submit" class="btn btn-success btn-lg" name="applaud" value="Applaud" data-trigger="hover"
-                       data-toggle="popover" data-placement="top" title="Applaud"
-                       data-content="Applaud your friends if they know the candidate you selected is a joke!">
-            </div>
-        </div>
-
-        <br><br><br>*We need your name to comply with spam regulations and inform your friend who is sending the attack.
-        <br><br>
-        US numbers only please. Others coming soon.
-    </form>
+    
     <footer>
         <div class="row">
             <div class="col-lg-12">
