adds storing candidate name as variable based on image click

--- a/form.html
+++ b/form.html
@@ -35,6 +35,7 @@
         <div class="form-group">
 			
 			<div class="col-sm-2">
+<!--
  
   <select class="form-control" id="sel1" name="candidate" placeholder="Select Candidate...">
     <option>Clinton</option>
@@ -47,6 +48,15 @@
     <option>Paul</option>
 	<option>Carson</option>
   </select>
+-->
+
+<!--				<input type="hidden" id= "hiddencand" name="candidate" value="">-->
+
+				<p id="demo"></p>
+
+<script>
+document.getElementById("demo").innerHTML = candidate;
+</script>
 				
 				</div>
 	</div>
