--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function setCandidate(candName) {
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
             <a data-toggle="modal" data-target="#myModal" class="img-circle">
-                <img class="img-responsive" src="homeimage/jeb.png" alt="" onclick="setCandidate('Jeb')">
+                <img class="img-responsive" src="homeimage/jeb.png" alt="" onclick="setCandidate('Bush')">
             </a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
