--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <div class="row text-center">
             <a class="img-circle" href="#">
                 <img src="homeimage/LOGO.jpg" class="center-block img-responsive" alt="">
+                <span><font face=braggadocio size=5 color=red ><i><b>Click on a candidate below to begin polititrolling your friends</b></i></font></span>
             </a>
         </div>
 
