--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row text-center">
             <a class="img-circle" href="#">
                 <img src="homeimage/LOGO.jpg" class="center-block img-responsive" alt="">
-                <span><font face=braggadocio size=5 color=red ><i><b>Click on a candidate below to begin polititrolling your friends</b></i></font></span>
+                <span><font face=braggadocio size=5 color=red ><i><b>Click on a candidate below to begin Polititrolling your friends</b></i></font></span>
             </a>
         </div>
 
@@ -133,7 +133,7 @@ function setCandidate(candName) {
 	<form class="form-horizontal" action="trollBlast.php" method="post">
         <div class="form-group">	
 			<div class="col-sm-4">
-				<input type="text" id= "hiddencand" name="candidate" value="">				
+				<input type="text" id= "hiddencand" name="candidate" value="" readonly>				
 				</div>
 	</div>
 			<div class="form-group">
