--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         <div class="row text-center">
             <a class="img-circle" href="#">
                 <img src="homeimage/LOGO.jpg" class="center-block img-responsive" alt="">
-                <span><font face=braggadocio size=5 color=red ><i><b>Click on a candidate below to begin Polititrolling your friends</b></i></font></span>
-            </a>
+				</a>
+			<br>
+                <span><font size=3 color=red >Click on a candidate below to begin Polititrolling your friends</font></span>
+            
         </div>
 
         <div class="col-lg-12">
