--- a/terms.html
+++ b/terms.html
@@ -15,17 +15,15 @@
         </div>
     </div>
   
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12">
-            <h2 class="text-center">Privacy Policy</h2>
-            <p>We don't care about your personal information and actually made an effort to collect as little as possible simply because we don't want to deal with it. We only need your target numbers to send the text messages.</p>
-            <p>We will not sell or share your information with anyone as we do not store any personal information.</p>
-        </div>
-    </div>
+ 
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12">
             <h2 class="text-center">Terms of Use</h2>
-            <p>We expect you to not abuse our system and only to send funny goat attacks to your friends whom you have a phone number. We are not responsible for any carrier data charges you or your recipient(s) may incur while using Goat Attack.</p>
+            <p>Polititroll lets you send hilarious political memes to your friends.
+
+By using our service, you affirm that you are the one responsible for sending these messages, and that you are only using our service to send messages to yourself or to your friends for whom you have a legitimate phone number, and you affirm that the recipient desires to receive these messages.
+
+Using our service to spam people (friends or randos) is strictly forbidden, and using our service for any reason than that mentioned above is strictly forbidden. If you do not agree to adhere to these terms, please disconnect immediately. </p>
         </div>
     </div>
 
@@ -33,7 +31,6 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12">
             <h2 class="text-center">Images</h2>
             <p>The images used in Polititroll come from Google using the free for commercial use license.</p>
-            <ul>
                
         </div>
     </div>
