--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function setCandidate(candName) {
                 Terms of Use</a><br>
             </div>
         </div>
-        <br><br><br>*We need your name to comply with spam regulations and inform your friend who is sending the attack.
+        <br><br><br>*We need your name to comply with spam regulations and inform your friend who is sending the troll.
         <br><br>
         US numbers only please. Others coming soon.
         
